fix z-index for toasts visibility over drawer overlay

--- a/src/app/styles/_vars.scss
+++ b/src/app/styles/_vars.scss
@@ -95,9 +95,9 @@
   // z-index
   --select-z-index: 9999;
 
-  --overlay-z-index: 99999999;
-  --modal-z-index: 99999999999;
-  --modal-content-z-index: 9999999999999;
+  --overlay-z-index: 99999;
+  --modal-z-index: 999999;
+  --modal-content-z-index: 9999999;
 
   // modal
   --modal-y-shift: -75.2%;
