--- a/src/shared/ui/CustomToastContainer/ui/toast.scss
+++ b/src/shared/ui/CustomToastContainer/ui/toast.scss
@@ -1,5 +1,5 @@
 .Toastify__toast-container {
-  z-index: 9999;
+  z-index: 9999999;
 }
 
 .Toastify__toast {
